organizing the head element

--- a/chill-spots.html
+++ b/chill-spots.html
@@ -1,227 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" href="css/chill-spots.css" />
-    <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
-    <title>Chill Spots</title>
-  </head>
-  <body>
-    <main>
-      <section class="hero-section">
-        <h2 class="visually-hidden">Hero Section</h2>
-        <!-- Visually hidden heading for accessibility -->
-        <section class="hero-content">
-          <!-- Navigation -->
-          <nav class="navbar">
-            <!-- Logo container -->
-            <div class="logo-container">
-              <a href="index.html">
-                <img
-                  src="img/work-balance-logov5.svg"
-                  class="navbar-logo"
-                  alt="Work Balance Logo"
-                  title="Work Balance company logo"
-                />
-              </a>
-            </div>
 
-            <!-- Hidden checkbox for toggling the menu -->
-            <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
+<head>
+  <title>Chill Spots</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Leandro A Nuñez B">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="icon" href="img/work-balance-favicon.png">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/chill-spots.css" />
+  <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
 
-            <!-- Label for the menu button (Hamburger Menu) -->
-            <label for="menu-toggle" class="navbar-hamburger-icon">
-              <i class="fa fa-bars"></i>
-            </label>
+</head>
 
-            <!-- Navigation links -->
-            <aside
-              class="navbar-links-container"
-              id="navbarLinks"
-              aria-label="Main Navigation"
-            >
-              <ul class="navbar-links">
-                <li><a href="index.html" class="navbar-link">Home</a></li>
-                <li>
-                  <a href="wellbeing-tips.html" class="navbar-link"
-                    >Wellbeing Tips</a
-                  >
-                </li>
-                <li>
-                  <a href="quick-breaks.html" class="navbar-link"
-                    >Quick Breaks</a
-                  >
-                </li>
-                <li>
-                  <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-                </li>
-                <li>
-                  <a href="workspace-tips.html" class="navbar-link"
-                    >Workspace Tips</a
-                  >
-                </li>
-                <li><a href="contact.html" class="navbar-link">Contact</a></li>
-              </ul>
-              <label for="menu-toggle" class="navbar-close-icon">Close</label>
-            </aside>
-          </nav>
+<body>
+  <main>
+    <section class="hero-section">
+      <h2 class="visually-hidden">Hero Section</h2>
+      <!-- Visually hidden heading for accessibility -->
+      <section class="hero-content">
+        <!-- Navigation -->
+        <nav class="navbar">
+          <!-- Logo container -->
+          <div class="logo-container">
+            <a href="index.html">
+              <img src="img/work-balance-logov5.svg" class="navbar-logo" alt="Work Balance Logo"
+                title="Work Balance company logo" />
+            </a>
+          </div>
 
-          <!-- Hero Message Container -->
-          <section class="hero-message-container">
-            <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
-          </section>
+          <!-- Hidden checkbox for toggling the menu -->
+          <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
+
+          <!-- Label for the menu button (Hamburger Menu) -->
+          <label for="menu-toggle" class="navbar-hamburger-icon">
+            <i class="fa fa-bars"></i>
+          </label>
+
+          <!-- Navigation links -->
+          <aside class="navbar-links-container" id="navbarLinks" aria-label="Main Navigation">
+            <ul class="navbar-links">
+              <li><a href="index.html" class="navbar-link">Home</a></li>
+              <li>
+                <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+              </li>
+              <li>
+                <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+              </li>
+              <li>
+                <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+              </li>
+              <li>
+                <a href="workspace-tips.html" class="navbar-link">Workspace Tips</a>
+              </li>
+              <li><a href="contact.html" class="navbar-link">Contact</a></li>
+            </ul>
+            <label for="menu-toggle" class="navbar-close-icon">Close</label>
+          </aside>
+        </nav>
+
+        <!-- Hero Message Container -->
+        <section class="hero-message-container">
+          <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
         </section>
       </section>
-    </main>
-    <section class="section-4">
-      <section class="inner-section-4">
+    </section>
+  </main>
+  <section class="section-4">
+    <section class="inner-section-4">
+      <article>
+        <h2>
+          Looking for a relaxed spot in Rotterdam? You are in the right place!
+        </h2>
+        <h3>Here are four unique chill spots in Rotterdam</h3>
+        <p>
+          These four locations provide a peaceful escape from the hustle and
+          bustle of the city. Whether you're looking to unwind, recharge, or
+          simply disconnect from media and the digital world, these serene
+          locations provide the perfect environment for relaxation and
+          reflection.
+        </p>
+        <p>
+          <strong><em>Why is it important to take a break in nature?</em></strong>
+        </p>
+        <p>
+          Stepping away from our busy routines and spending time in natural
+          environments helps reduce stress, clear the mind, and improve
+          overall well-being. Nature’s calming effect, with its fresh air,
+          soothing sounds, and open spaces, promotes relaxation and mental
+          clarity, allowing us to recharge and return with better focus and
+          creativity. In addition, taking breaks in nature boosts mood and
+          energy levels by encouraging physical movement and a connection to
+          the outdoors. This not only benefits our mental health but also
+          enhances our physical vitality, making it easier to tackle daily
+          challenges with renewed energy and a fresh perspective.
+        </p>
+      </article>
+    </section>
+  </section>
+
+  <section class="image-blocks">
+    <section class="inner-blocks white-background">
+      <section class="image-block-1">
+        <img src="img/connect-nature.webp" alt="" class="image-block" />
         <article>
-          <h2>
-            Looking for a relaxed spot in Rotterdam? You are in the right place!
-          </h2>
-          <h3>Here are four unique chill spots in Rotterdam</h3>
+          <h3>Kralingse Bos</h3>
           <p>
-            These four locations provide a peaceful escape from the hustle and
-            bustle of the city. Whether you're looking to unwind, recharge, or
-            simply disconnect from media and the digital world, these serene
-            locations provide the perfect environment for relaxation and
-            reflection.
-          </p>
-          <p>
-            <strong
-              ><em>Why is it important to take a break in nature?</em></strong
-            >
-          </p>
-          <p>
-            Stepping away from our busy routines and spending time in natural
-            environments helps reduce stress, clear the mind, and improve
-            overall well-being. Nature’s calming effect, with its fresh air,
-            soothing sounds, and open spaces, promotes relaxation and mental
-            clarity, allowing us to recharge and return with better focus and
-            creativity. In addition, taking breaks in nature boosts mood and
-            energy levels by encouraging physical movement and a connection to
-            the outdoors. This not only benefits our mental health but also
-            enhances our physical vitality, making it easier to tackle daily
-            challenges with renewed energy and a fresh perspective.
+            A tranquil, expansive park featuring a beautiful lake, perfect for
+            a calming walk or a quiet moment by the water. You can also enjoy
+            the scenic views and nature trails that will help you clear your
+            mind.
           </p>
         </article>
+        <a href="#" class="general-button">Directions (Google Map)</a>
+      </section>
+
+      <section class="image-block-2">
+        <img src="img/wellbeing-tips-header.webp" alt="" class="image-block" />
+        <article>
+          <h3>Jan Evertsenplaats</h3>
+          <p>
+            A peaceful park in the heart of Rotterdam Centrum, surrounded by
+            buildings yet calm and tranquil. Perfect for relaxing, reading, or
+            simply unwinding in a serene environment, offering a quiet escape
+            from the bustling city.
+          </p>
+        </article>
+        <a href="#" class="general-button">Directions (Google Map)</a>
       </section>
     </section>
+  </section>
 
-    <section class="image-blocks">
-      <section class="inner-blocks white-background">
-        <section class="image-block-1">
-          <img src="img/connect-nature.webp" alt="" class="image-block" />
-          <article>
-            <h3>Kralingse Bos</h3>
-            <p>
-              A tranquil, expansive park featuring a beautiful lake, perfect for
-              a calming walk or a quiet moment by the water. You can also enjoy
-              the scenic views and nature trails that will help you clear your
-              mind.
-            </p>
-          </article>
-          <a href="#" class="general-button">Directions (Google Map)</a>
-        </section>
+  <section class="image-blocks">
+    <section class="inner-blocks">
+      <section class="image-block-1">
+        <img src="img/listening-to-music.webp" alt="" class="image-block" />
+        <article>
+          <h3>Joost Banckertsplaats</h3>
+          <p>
+            A peaceful green space in the center of Rotterdam, offering a
+            quiet break from the city's busy streets. Its calm atmosphere and
+            tidy greenery make it ideal for relaxing or spending a quiet
+            moment in a modern setting.
+          </p>
+        </article>
+        <a href="#" class="general-button">Directions (Google Map)</a>
+      </section>
 
-        <section class="image-block-2">
-          <img
-            src="img/wellbeing-tips-header.webp"
-            alt=""
-            class="image-block"
-          />
-          <article>
-            <h3>Jan Evertsenplaats</h3>
-            <p>
-              A peaceful park in the heart of Rotterdam Centrum, surrounded by
-              buildings yet calm and tranquil. Perfect for relaxing, reading, or
-              simply unwinding in a serene environment, offering a quiet escape
-              from the bustling city.
-            </p>
-          </article>
-          <a href="#" class="general-button">Directions (Google Map)</a>
-        </section>
+      <section class="image-block-2">
+        <img src="img/healthy-snack.webp" alt="" class="image-block" />
+        <article>
+          <h3>Schouwburgplein</h3>
+          <p>
+            A vibrant urban square in the heart of Rotterdam, known for its
+            modern design and dynamic atmosphere. It's a lively spot where
+            people gather, surrounded by cultural landmarks and offering a
+            space for events, relaxation, and socializing.
+          </p>
+        </article>
+        <a href="#" class="general-button">Directions (Google Map)</a>
       </section>
     </section>
+  </section>
 
-    <section class="image-blocks">
-      <section class="inner-blocks">
-        <section class="image-block-1">
-          <img src="img/listening-to-music.webp" alt="" class="image-block" />
-          <article>
-            <h3>Joost Banckertsplaats</h3>
-            <p>
-              A peaceful green space in the center of Rotterdam, offering a
-              quiet break from the city's busy streets. Its calm atmosphere and
-              tidy greenery make it ideal for relaxing or spending a quiet
-              moment in a modern setting.
-            </p>
-          </article>
-          <a href="#" class="general-button">Directions (Google Map)</a>
-        </section>
-
-        <section class="image-block-2">
-          <img src="img/healthy-snack.webp" alt="" class="image-block" />
-          <article>
-            <h3>Schouwburgplein</h3>
-            <p>
-              A vibrant urban square in the heart of Rotterdam, known for its
-              modern design and dynamic atmosphere. It's a lively spot where
-              people gather, surrounded by cultural landmarks and offering a
-              space for events, relaxation, and socializing.
-            </p>
-          </article>
-          <a href="#" class="general-button">Directions (Google Map)</a>
-        </section>
-      </section>
+  <footer class="footer">
+    <nav class="quick-links">
+      <p>
+        <strong><em>Quick Breaks:</em></strong>
+      </p>
+      <ul class="footer-navbar-links">
+        <li><a href="index.html" class="navbar-link">Home</a></li>
+        <li>
+          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+        </li>
+        <li>
+          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+        </li>
+        <li>
+          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+        </li>
+        <li>
+          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
+        </li>
+        <li><a href="contact.html" class="navbar-link">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="copyright">
+      <figure class="footer-logo">
+        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+      </figure>
+      <p class="copyright-text">
+        &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
+      </p>
+      <address class="icons">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+      </address>
     </section>
+  </footer>
+</body>
 
-    <footer class="footer">
-      <nav class="quick-links">
-        <p>
-          <strong><em>Quick Breaks:</em></strong>
-        </p>
-        <ul class="footer-navbar-links">
-          <li><a href="index.html" class="navbar-link">Home</a></li>
-          <li>
-            <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-          </li>
-          <li>
-            <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-          </li>
-          <li>
-            <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-          </li>
-          <li>
-            <a href="work-space-tips.html" class="navbar-link"
-              >Workspace Tips</a
-            >
-          </li>
-          <li><a href="contact.html" class="navbar-link">Contact</a></li>
-        </ul>
-      </nav>
-      <section class="copyright">
-        <figure class="footer-logo">
-          <img src="img/work-balance-logov5.svg" alt="" srcset="" />
-        </figure>
-        <p class="copyright-text">
-          &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
-        </p>
-        <address class="icons">
-          <a href="https://www.facebook.com/"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <a href="https://www.instagram.com/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-        </address>
-      </section>
-    </footer>
-  </body>
 </html>
