--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+    <title>Contact Us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Leandro A Nuñez B">
     <meta name="description"
         content="Contact us for questions, feedback, and suggestions to enhance your experience with Work Balance.">
     <meta name="keywords" content="contact, work balance, feedback, suggestions, inquiries">
@@ -12,7 +14,6 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/general-styles.css">
-    <title>Contact</title>
 </head>
 
 <body>
