--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -1,194 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" href="css/workspace-tips.css" />
-    <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
-    <title>Workspace Tips</title>
-  </head>
-  <body>
-    <main>
-      <section class="hero-section">
-        <h2 class="visually-hidden">Hero Section</h2>
-        <!-- Visually hidden heading for accessibility -->
-        <section class="hero-content">
-          <!-- Navigation -->
-          <nav class="navbar">
-            <!-- Logo container -->
-            <div class="logo-container">
-              <a href="index.html">
-                <img
-                  src="img/work-balance-logov5.svg"
-                  class="navbar-logo"
-                  alt="Work Balance Logo"
-                  title="Work Balance company logo"
-                />
-              </a>
-            </div>
 
-            <!-- Hidden checkbox for toggling the menu -->
-            <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
+<head>
+  <title>Workspace Tips</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Leandro A Nuñez B">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="icon" href="img/work-balance-favicon.png">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/workspace-tips.css" />
+  <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
+</head>
 
-            <!-- Label for the menu button (Hamburger Menu) -->
-            <label for="menu-toggle" class="navbar-hamburger-icon">
-              <i class="fa fa-bars"></i>
-            </label>
+<body>
+  <main>
+    <section class="hero-section">
+      <h2 class="visually-hidden">Hero Section</h2>
+      <!-- Visually hidden heading for accessibility -->
+      <section class="hero-content">
+        <!-- Navigation -->
+        <nav class="navbar">
+          <!-- Logo container -->
+          <div class="logo-container">
+            <a href="index.html">
+              <img src="img/work-balance-logov5.svg" class="navbar-logo" alt="Work Balance Logo"
+                title="Work Balance company logo" />
+            </a>
+          </div>
 
-            <!-- Navigation links -->
-            <aside
-              class="navbar-links-container"
-              id="navbarLinks"
-              aria-label="Main Navigation"
-            >
-              <ul class="navbar-links">
-                <li><a href="index.html" class="navbar-link">Home</a></li>
-                <li>
-                  <a href="wellbeing-tips.html" class="navbar-link"
-                    >Wellbeing Tips</a
-                  >
-                </li>
-                <li>
-                  <a href="quick-breaks.html" class="navbar-link"
-                    >Quick Breaks</a
-                  >
-                </li>
-                <li>
-                  <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-                </li>
-                <li>
-                  <a href="workspace-tips.html" class="navbar-link"
-                    >Workspace Tips</a
-                  >
-                </li>
-                <li><a href="contact.html" class="navbar-link">Contact</a></li>
-              </ul>
-              <label for="menu-toggle" class="navbar-close-icon">Close</label>
-            </aside>
-          </nav>
+          <!-- Hidden checkbox for toggling the menu -->
+          <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
 
-          <!-- Hero Message Container -->
-          <section class="hero-message-container">
-            <h1 class="hero-heading">Workspace Tips</h1>
-          </section>
+          <!-- Label for the menu button (Hamburger Menu) -->
+          <label for="menu-toggle" class="navbar-hamburger-icon">
+            <i class="fa fa-bars"></i>
+          </label>
+
+          <!-- Navigation links -->
+          <aside class="navbar-links-container" id="navbarLinks" aria-label="Main Navigation">
+            <ul class="navbar-links">
+              <li><a href="index.html" class="navbar-link">Home</a></li>
+              <li>
+                <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+              </li>
+              <li>
+                <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+              </li>
+              <li>
+                <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+              </li>
+              <li>
+                <a href="workspace-tips.html" class="navbar-link">Workspace Tips</a>
+              </li>
+              <li><a href="contact.html" class="navbar-link">Contact</a></li>
+            </ul>
+            <label for="menu-toggle" class="navbar-close-icon">Close</label>
+          </aside>
+        </nav>
+
+        <!-- Hero Message Container -->
+        <section class="hero-message-container">
+          <h1 class="hero-heading">Workspace Tips</h1>
         </section>
       </section>
-    </main>
-    <section class="section-4">
-      <section class="inner-section-4">
-        <article>
-          <h2>The Importance of a Comfortable Workspace</h2>
+    </section>
+  </main>
+  <section class="section-4">
+    <section class="inner-section-4">
+      <article>
+        <h2>The Importance of a Comfortable Workspace</h2>
+        <p>
+          A comfortable workspace is crucial because it promotes better
+          physical health, enhances focus and productivity, reduces stress,
+          fosters creativity, and contributes to a positive work-life balance,
+          ultimately leading to more efficient, enjoyable, and sustainable
+          work.
+        </p>
+      </article>
+    </section>
+  </section>
+
+  <section class="isolation">
+    <section class="inner-isolation">
+      <article class="isolation-text">
+        <h2>Benefits of a Comfortable Workspace</h2>
+      </article>
+      <section class="isolation-blocks">
+        <article class="block-1">
+          <p><strong>Physical Health</strong></p>
           <p>
-            A comfortable workspace is crucial because it promotes better
-            physical health, enhances focus and productivity, reduces stress,
-            fosters creativity, and contributes to a positive work-life balance,
-            ultimately leading to more efficient, enjoyable, and sustainable
-            work.
+            A comfortable workspace can prevent physical strain and long-term
+            health issues. Ergonomically designed chairs, desks, and computer
+            setups reduce the risk of back pain, neck strain, eye fatigue, and
+            carpal tunnel syndrome. Proper posture and positioning ensure that
+            your body remains supported, minimizing discomfort during long
+            work hours.
+          </p>
+        </article>
+        <article class="block-2">
+          <p>
+            <strong>Improved Focus and Productivity</strong>
+          </p>
+          <p>
+            When your workspace is well-organized and comfortable, it becomes
+            easier to concentrate on tasks. Clutter and discomfort can be
+            distracting, leading to lower efficiency and more frequent breaks.
+            A neat, well-designed workspace promotes a focused, productive
+            environment.
+          </p>
+        </article>
+      </section>
+      <section class="isolation-blocks">
+        <article class="block-1">
+          <p><strong>Mental Well-being</strong></p>
+          <p>
+            A comfortable and aesthetically pleasing workspace can reduce
+            stress and improve your mood. Natural lighting, personal touches,
+            and a clean, well-organized space help create a positive
+            atmosphere, which can boost motivation and mental clarity.
+          </p>
+        </article>
+        <article class="block-2">
+          <p>
+            <strong>Increased Creativity</strong>
+          </p>
+          <p>
+            Comfort fosters creativity. When you're in a relaxed and conducive
+            environment, your mind is more likely to explore new ideas and
+            think critically. A comfortable workspace often encourages
+            innovative problem-solving and creative thinking.
           </p>
         </article>
       </section>
     </section>
+  </section>
 
-    <section class="isolation">
-      <section class="inner-isolation">
-        <article class="isolation-text">
-          <h2>Benefits of a Comfortable Workspace</h2>
-        </article>
-        <section class="isolation-blocks">
-          <article class="block-1">
-            <p><strong>Physical Health</strong></p>
-            <p>
-              A comfortable workspace can prevent physical strain and long-term
-              health issues. Ergonomically designed chairs, desks, and computer
-              setups reduce the risk of back pain, neck strain, eye fatigue, and
-              carpal tunnel syndrome. Proper posture and positioning ensure that
-              your body remains supported, minimizing discomfort during long
-              work hours.
-            </p>
-          </article>
-          <article class="block-2">
-            <p>
-              <strong>Improved Focus and Productivity</strong>
-            </p>
-            <p>
-              When your workspace is well-organized and comfortable, it becomes
-              easier to concentrate on tasks. Clutter and discomfort can be
-              distracting, leading to lower efficiency and more frequent breaks.
-              A neat, well-designed workspace promotes a focused, productive
-              environment.
-            </p>
-          </article>
-        </section>
-        <section class="isolation-blocks">
-          <article class="block-1">
-            <p><strong>Mental Well-being</strong></p>
-            <p>
-              A comfortable and aesthetically pleasing workspace can reduce
-              stress and improve your mood. Natural lighting, personal touches,
-              and a clean, well-organized space help create a positive
-              atmosphere, which can boost motivation and mental clarity.
-            </p>
-          </article>
-          <article class="block-2">
-            <p>
-              <strong>Increased Creativity</strong>
-            </p>
-            <p>
-              Comfort fosters creativity. When you're in a relaxed and conducive
-              environment, your mind is more likely to explore new ideas and
-              think critically. A comfortable workspace often encourages
-              innovative problem-solving and creative thinking.
-            </p>
-          </article>
-        </section>
-      </section>
+  <footer class="footer">
+    <nav class="quick-links">
+      <p>
+        <strong><em>Quick Breaks:</em></strong>
+      </p>
+      <ul class="footer-navbar-links">
+        <li><a href="index.html" class="navbar-link">Home</a></li>
+        <li>
+          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+        </li>
+        <li>
+          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+        </li>
+        <li>
+          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+        </li>
+        <li>
+          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
+        </li>
+        <li><a href="contact.html" class="navbar-link">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="copyright">
+      <figure class="footer-logo">
+        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+      </figure>
+      <p class="copyright-text">
+        &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
+      </p>
+      <address class="icons">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+      </address>
     </section>
+  </footer>
+</body>
 
-    <footer class="footer">
-      <nav class="quick-links">
-        <p>
-          <strong><em>Quick Breaks:</em></strong>
-        </p>
-        <ul class="footer-navbar-links">
-          <li><a href="index.html" class="navbar-link">Home</a></li>
-          <li>
-            <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-          </li>
-          <li>
-            <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-          </li>
-          <li>
-            <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-          </li>
-          <li>
-            <a href="work-space-tips.html" class="navbar-link"
-              >Workspace Tips</a
-            >
-          </li>
-          <li><a href="contact.html" class="navbar-link">Contact</a></li>
-        </ul>
-      </nav>
-      <section class="copyright">
-        <figure class="footer-logo">
-          <img src="img/work-balance-logov5.svg" alt="" srcset="" />
-        </figure>
-        <p class="copyright-text">
-          &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
-        </p>
-        <address class="icons">
-          <a href="https://www.facebook.com/"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <a href="https://www.instagram.com/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-        </address>
-      </section>
-    </footer>
-  </body>
 </html>
