--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -1,206 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" href="css/quick-breaks.css" />
-    <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
-    <title>Quick Breaks</title>
-  </head>
-  <body>
-    <main>
-      <section class="hero-section">
-        <h2 class="visually-hidden">Hero Section</h2>
-        <!-- Visually hidden heading for accessibility -->
-        <section class="hero-content">
-          <!-- Navigation -->
-          <nav class="navbar">
-            <!-- Logo container -->
-            <div class="logo-container">
-              <a href="index.html">
-                <img
-                  src="img/work-balance-logov5.svg"
-                  class="navbar-logo"
-                  alt="Work Balance Logo"
-                  title="Work Balance company logo"
-                />
-              </a>
-            </div>
 
-            <!-- Hidden checkbox for toggling the menu -->
-            <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
+<head>
+  <title>Quick Breaks</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Leandro A Nuñez B">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="icon" href="img/work-balance-favicon.png">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/quick-breaks.css" />
+  <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
+</head>
 
-            <!-- Label for the menu button (Hamburger Menu) -->
-            <label for="menu-toggle" class="navbar-hamburger-icon">
-              <i class="fa fa-bars"></i>
-            </label>
+<body>
+  <main>
+    <section class="hero-section">
+      <h2 class="visually-hidden">Hero Section</h2>
+      <!-- Visually hidden heading for accessibility -->
+      <section class="hero-content">
+        <!-- Navigation -->
+        <nav class="navbar">
+          <!-- Logo container -->
+          <div class="logo-container">
+            <a href="index.html">
+              <img src="img/work-balance-logov5.svg" class="navbar-logo" alt="Work Balance Logo"
+                title="Work Balance company logo" />
+            </a>
+          </div>
 
-            <!-- Navigation links -->
-            <aside
-              class="navbar-links-container"
-              id="navbarLinks"
-              aria-label="Main Navigation"
-            >
-              <ul class="navbar-links">
-                <li><a href="index.html" class="navbar-link">Home</a></li>
-                <li>
-                  <a href="wellbeing-tips.html" class="navbar-link"
-                    >Wellbeing Tips</a
-                  >
-                </li>
-                <li>
-                  <a href="quick-breaks.html" class="navbar-link"
-                    >Quick Breaks</a
-                  >
-                </li>
-                <li>
-                  <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-                </li>
-                <li>
-                  <a href="workspace-tips.html" class="navbar-link"
-                    >Workspace Tips</a
-                  >
-                </li>
-                <li><a href="contact.html" class="navbar-link">Contact</a></li>
-              </ul>
-              <label for="menu-toggle" class="navbar-close-icon">Close</label>
-            </aside>
-          </nav>
+          <!-- Hidden checkbox for toggling the menu -->
+          <input type="checkbox" id="menu-toggle" class="menu-checkbox" />
 
-          <!-- Hero Message Container -->
-          <section class="hero-message-container">
-            <h1 class="hero-heading">Quick Breaks</h1>
-          </section>
+          <!-- Label for the menu button (Hamburger Menu) -->
+          <label for="menu-toggle" class="navbar-hamburger-icon">
+            <i class="fa fa-bars"></i>
+          </label>
+
+          <!-- Navigation links -->
+          <aside class="navbar-links-container" id="navbarLinks" aria-label="Main Navigation">
+            <ul class="navbar-links">
+              <li><a href="index.html" class="navbar-link">Home</a></li>
+              <li>
+                <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+              </li>
+              <li>
+                <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+              </li>
+              <li>
+                <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+              </li>
+              <li>
+                <a href="workspace-tips.html" class="navbar-link">Workspace Tips</a>
+              </li>
+              <li><a href="contact.html" class="navbar-link">Contact</a></li>
+            </ul>
+            <label for="menu-toggle" class="navbar-close-icon">Close</label>
+          </aside>
+        </nav>
+
+        <!-- Hero Message Container -->
+        <section class="hero-message-container">
+          <h1 class="hero-heading">Quick Breaks</h1>
         </section>
       </section>
-    </main>
-    <section class="section-4">
-      <section class="inner-section-4">
+    </section>
+  </main>
+  <section class="section-4">
+    <section class="inner-section-4">
+      <article>
+        <h2>Need a break?</h2>
+        <h3>
+          Here are some quick activities to refresh your mind and body during
+          your workday.
+        </h3>
+        <p>
+          The Well being tips page emphasizes the importance of taking regular
+          breaks. Here's why it's essential: Pausing throughout your workday
+          boosts both productivity and well-being, especially for remote
+          workers who tend to sit for long periods. Even a brief break helps
+          refresh your mind, reducing mental exhaustion and enhancing
+          concentration. For more tips, click More Well-being tips.
+        </p>
+      </article>
+    </section>
+  </section>
+
+  <section class="image-blocks">
+    <section class="inner-blocks white-background">
+      <section class="image-block-1">
+        <img src="img/connect-with-nature.webp" alt="" class="image-block" />
         <article>
-          <h2>Need a break?</h2>
-          <h3>
-            Here are some quick activities to refresh your mind and body during
-            your workday.
-          </h3>
+          <h3>Go out and connect with nature</h3>
           <p>
-            The Well being tips page emphasizes the importance of taking regular
-            breaks. Here's why it's essential: Pausing throughout your workday
-            boosts both productivity and well-being, especially for remote
-            workers who tend to sit for long periods. Even a brief break helps
-            refresh your mind, reducing mental exhaustion and enhancing
-            concentration. For more tips, click More Well-being tips.
+            Spending time in nature helps you disconnect from work, relax both
+            your mind and body, and boost your overall happiness. Not only
+            does it improve your mood, but connecting with nature also gives
+            your eyes a much-needed break after spending long hours in front
+            of a screen. Learn about the best chill spots in
+            Rotterdam: Rotterdam chill spots.
+          </p>
+        </article>
+      </section>
+
+      <section class="image-block-2">
+        <img src="img/taking-a-jog.webp" alt="" class="image-block" />
+        <article>
+          <h3>Take a Walk or jog</h3>
+          <p>
+            Step outside for a 10-minute walk or jog to get fresh air and
+            natural light. This brief break helps refresh your mind, improve
+            your mood, and give you a mental reset. Learn more about the best
+            practices for walking correctly: How to walk with good form.
           </p>
         </article>
       </section>
     </section>
+  </section>
 
-    <section class="image-blocks">
-      <section class="inner-blocks white-background">
-        <section class="image-block-1">
-          <img src="img/connect-with-nature.webp" alt="" class="image-block" />
-          <article>
-            <h3>Go out and connect with nature</h3>
-            <p>
-              Spending time in nature helps you disconnect from work, relax both
-              your mind and body, and boost your overall happiness. Not only
-              does it improve your mood, but connecting with nature also gives
-              your eyes a much-needed break after spending long hours in front
-              of a screen. Learn about the best chill spots in
-              Rotterdam: Rotterdam chill spots.
-            </p>
-          </article>
-        </section>
+  <section class="image-blocks">
+    <section class="inner-blocks">
+      <section class="image-block-1">
+        <img src="img/listening-to-music.webp" alt="" class="image-block" />
+        <article>
+          <h3>Listen to Music</h3>
+          <p>
+            Play your favorite music or a relaxing playlist to shift your
+            mood. Whether calming or energizing, music helps reset your
+            mindset and can make your work environment more enjoyable. Learn
+            more about the best audio streaming services: streaming services.
+          </p>
+        </article>
+      </section>
 
-        <section class="image-block-2">
-          <img src="img/taking-a-jog.webp" alt="" class="image-block" />
-          <article>
-            <h3>Take a Walk or jog</h3>
-            <p>
-              Step outside for a 10-minute walk or jog to get fresh air and
-              natural light. This brief break helps refresh your mind, improve
-              your mood, and give you a mental reset. Learn more about the best
-              practices for walking correctly: How to walk with good form.
-            </p>
-          </article>
-        </section>
+      <section class="image-block-2">
+        <img src="img/healthy-snack.webp" alt="" class="image-block" />
+        <article>
+          <h3>Hydrate and Snack</h3>
+          <p>
+            Take a moment to drink water and enjoy a healthy snack. This quick
+            refuel keeps you hydrated and energized, helping you stay focused
+            and refreshed throughout the day. Learn more about healthy
+            snacks: Healthy snacks.
+          </p>
+        </article>
       </section>
     </section>
+  </section>
 
-    <section class="image-blocks">
-      <section class="inner-blocks">
-        <section class="image-block-1">
-          <img src="img/listening-to-music.webp" alt="" class="image-block" />
-          <article>
-            <h3>Listen to Music</h3>
-            <p>
-              Play your favorite music or a relaxing playlist to shift your
-              mood. Whether calming or energizing, music helps reset your
-              mindset and can make your work environment more enjoyable. Learn
-              more about the best audio streaming services: streaming services.
-            </p>
-          </article>
-        </section>
-
-        <section class="image-block-2">
-          <img src="img/healthy-snack.webp" alt="" class="image-block" />
-          <article>
-            <h3>Hydrate and Snack</h3>
-            <p>
-              Take a moment to drink water and enjoy a healthy snack. This quick
-              refuel keeps you hydrated and energized, helping you stay focused
-              and refreshed throughout the day. Learn more about healthy
-              snacks: Healthy snacks.
-            </p>
-          </article>
-        </section>
-      </section>
+  <footer class="footer">
+    <nav class="quick-links">
+      <p>
+        <strong><em>Quick Breaks:</em></strong>
+      </p>
+      <ul class="footer-navbar-links">
+        <li><a href="index.html" class="navbar-link">Home</a></li>
+        <li>
+          <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
+        </li>
+        <li>
+          <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
+        </li>
+        <li>
+          <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
+        </li>
+        <li>
+          <a href="work-space-tips.html" class="navbar-link">Workspace Tips</a>
+        </li>
+        <li><a href="contact.html" class="navbar-link">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="copyright">
+      <figure class="footer-logo">
+        <img src="img/work-balance-logov5.svg" alt="" srcset="" />
+      </figure>
+      <p class="copyright-text">
+        &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
+      </p>
+      <address class="icons">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+      </address>
     </section>
+  </footer>
+</body>
 
-    <footer class="footer">
-      <nav class="quick-links">
-        <p>
-          <strong><em>Quick Breaks:</em></strong>
-        </p>
-        <ul class="footer-navbar-links">
-          <li><a href="index.html" class="navbar-link">Home</a></li>
-          <li>
-            <a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a>
-          </li>
-          <li>
-            <a href="quick-breaks.html" class="navbar-link">Quick Breaks</a>
-          </li>
-          <li>
-            <a href="chill-spots.html" class="navbar-link">Chill Spots</a>
-          </li>
-          <li>
-            <a href="work-space-tips.html" class="navbar-link"
-              >Workspace Tips</a
-            >
-          </li>
-          <li><a href="contact.html" class="navbar-link">Contact</a></li>
-        </ul>
-      </nav>
-      <section class="copyright">
-        <figure class="footer-logo">
-          <img src="img/work-balance-logov5.svg" alt="" srcset="" />
-        </figure>
-        <p class="copyright-text">
-          &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
-        </p>
-        <address class="icons">
-          <a href="https://www.facebook.com/"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <a href="https://www.instagram.com/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-        </address>
-      </section>
-    </footer>
-  </body>
 </html>
