--- a/contact.html
+++ b/contact.html
@@ -23,34 +23,34 @@
             <!-- Visually hidden heading for accessibility -->
             <section class="hero-content">
                 <!-- Navigation -->
-                <nav class="navbar">
-                    <!-- Logo container -->
-                    <div class="logo-container">
+                <nav class="main-navigation">
+                    <!-- Logo container updated to header for semantic clarity -->
+                    <header class="brand-logo">
                         <a href="index.html">
-                            <img src="img/work-balance-logov5.svg" class="navbar-logo" alt="Work Balance company logo"
+                            <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                                 title="Work Balance company logo">
                         </a>
-                    </div>
+                    </header>
 
                     <!-- Hidden checkbox for toggling the menu -->
-                    <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+                    <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
 
                     <!-- Label for the menu button (Hamburger Menu) -->
-                    <label for="menu-toggle" class="navbar-hamburger-icon">
+                    <label for="menu-toggle-checkbox" class="menu-toggle-icon">
                         <i class="fa fa-bars"></i>
                     </label>
 
                     <!-- Navigation links -->
-                    <aside class="navbar-links-container" id="navbarLinks" aria-label="Main Navigation">
-                        <ul class="navbar-links">
-                            <li><a href="index.html" class="navbar-link">Home</a></li>
-                            <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
-                            <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
-                            <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
-                            <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
-                            <li><a href="contact.html" class="navbar-link">Contact</a></li>
+                    <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
+                        <ul class="navigation-links">
+                            <li><a href="index.html" class="navigation-item">Home</a></li>
+                            <li><a href="wellbeing-tips.html" class="navigation-item">Wellbeing Tips</a></li>
+                            <li><a href="quick-breaks.html" class="navigation-item">Quick Breaks</a></li>
+                            <li><a href="chill-spots.html" class="navigation-item">Chill Spots</a></li>
+                            <li><a href="workspace-tips.html" class="navigation-item">Workspace Tips</a></li>
+                            <li><a href="contact.html" class="navigation-item">Contact</a></li>
                         </ul>
-                        <label for="menu-toggle" class="navbar-close-icon">Close</label>
+                        <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
                     </aside>
                 </nav>
 
