--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>Well-being Tips</title>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Leandro A Nuñez B">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="icon" href="img/work-balance-favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/wellbeing-tips.css">
   <link rel="stylesheet" type="text/css" href="css/general-styles.css">
