--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         content="Contact us for questions, feedback, and suggestions to enhance your experience with Work Balance.">
     <meta name="keywords" content="contact, work balance, feedback, suggestions, inquiries">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="img/work-balance-favicon.png">
+    <link rel="icon" href="img/work-balance-favicon.png" alt="company logo favicon">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/general-styles.css">
